@@ -1,3 +1,13 @@
+2008-07-16 Tomas Frydrych  <tf@o-hand.com>
+
+	* src/home/hd-home-view.c:
+	* src/home/hd-home.c:
+	* src/home/hd-switcher-group.c:
+	* src/home/hd-switcher-group.h:
+	* src/home/hd-switcher.c:
+
+	Implemented panning in the switcher.
+
 2008-07-15 Tomas Frydrych  <tf@o-hand.com>
 
 	* src/home/hd-home.c:
